css/style_final.css
body, html {
    overflow: hidden;
}

.invisible {
    opacity: 0;
}

#fullpage {
    height: 100%;
    position: relative;
    touch-action: none;
    transition: all 700ms ease;
    transform: translate3d(0px, 0px, 0px);
}

.icon,
.share-button {
    position: fixed !important;
}

section {
    position: relative;
    display: inline-block;
    float: left;
    width: 100%;
}

.diapo {
    position: relative;
    display: inline-block;
    float: left;
    width: 100%;
    height: 100%;
}

/* ********************************************************************************************************************/
/* ********** Section 1 ***********************************************************************************************/

section.first .cobi {
    position: absolute;
}

section.first .cobi.no-animate {
    left: -30%;
    opacity: 0;
}

section.first .cobi.animated {
    left: 30%;
    opacity: 1;
}

section.first .aros {
    position: relative;
}

section.first .aros img.rings_all {
    visibility: hidden;
}

section.first .aros img.rings {
    position: absolute;
    width: 100%;
    max-width: 365px;
    opacity: 0;
}

section.first .aros img.rings.animate {
    opacity: 1;
}

section.first .aros img.rings.ring_blue.no-animate {
    top: -85%;
    left: -30%;
}

section.first .aros img.rings.ring_blue.animate {
    top: 5%;
    left: 0%;
}

section.first .aros img.rings.ring_black.no-animate {
    top: -85%;
    left: 32.5%;
}

section.first .aros img.rings.ring_black.animate {
    top: 0%;
    left: 32.5%;
}

section.first .aros img.rings.ring_red.no-animate {
    top: -85%;
    right: -30%;
}

section.first .aros img.rings.ring_red.animate {
    top: 5%;
    right: 0%;
}

section.first .aros img.rings.ring_yellow.no-animate {
    bottom: -80%;
    left: -46%;
}

section.first .aros img.rings.ring_yellow.animate {
    bottom: 0%;
    left: 16%;
}

section.first .aros img.rings.ring_green.no-animate {
    bottom: -80%;
    right: -46%;
}

section.first .aros img.rings.ring_green.animate {
    bottom: 0%;
    right: 14%;
}

section.first .diapo.diapo_1.no-animate {
    top: 0%;
}

section.first .diapo.diapo_1.animate,
section.first .diapo.diapo_2.animate {
    top: -100%;
}


.scroll-down-wrap {
    position: fixed !important;
}

